--- a/IE17-Client/IE17-Client.vcxproj.filters
+++ b/IE17-Client/IE17-Client.vcxproj.filters
@@ -18,6 +18,9 @@
     <ClInclude Include="main.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="gameconstants.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="dllmain.cpp">
