--- a/IE17-Client/IE17-Client.vcxproj
+++ b/IE17-Client/IE17-Client.vcxproj
@@ -141,6 +141,7 @@
       <AssemblerOutput>AssemblyAndSourceCode</AssemblerOutput>
       <AdditionalIncludeDirectories>C:\Users\PC\source\repos\IE17-Client\IE17-Client\lib;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
       <WholeProgramOptimization>false</WholeProgramOptimization>
+      <LanguageStandard>stdcpp20</LanguageStandard>
     </ClCompile>
     <Link>
       <SubSystem>Windows</SubSystem>
