--- a/IE17-Client/IE17-Client.vcxproj.filters
+++ b/IE17-Client/IE17-Client.vcxproj.filters
@@ -27,6 +27,9 @@
     <ClInclude Include="player.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="enums.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="dllmain.cpp">
