--- a/IE17-Client/IE17-Client.vcxproj.filters
+++ b/IE17-Client/IE17-Client.vcxproj.filters
@@ -30,6 +30,9 @@
     <ClInclude Include="enums.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="actors.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="dllmain.cpp">
@@ -39,6 +42,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="player.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="actors.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
