--- a/IE17-Client/IE17-Client.vcxproj.filters
+++ b/IE17-Client/IE17-Client.vcxproj.filters
@@ -42,6 +42,9 @@
     <ClInclude Include="MinHook\MinHook.h">
       <Filter>MinHook</Filter>
     </ClInclude>
+    <ClInclude Include="src\lua_functions.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="dllmain.cpp">
@@ -60,6 +63,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="src\script.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="src\lua_functions.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
